Upgrade to Java 25, Jakarta EE, Failsafe 3.x, and DeltaSpike 2.0
- Migrate all javax.* imports to jakarta.* namespace
- Upgrade Failsafe from 1.x (net.jodah) to 3.3.2 (dev.failsafe) with new builder API
- Upgrade DeltaSpike from 1.4.0 to 2.0.0
- Replace javaee-api 7.0 with individual Jakarta EE 10 API dependencies
- Set maven.compiler.release to 25
- Fix deprecated APIs: BigDecimal.ROUND_HALF_UP → RoundingMode.HALF_UP, new Double() → Double.valueOf()
- Replace star imports with explicit imports, fix raw types
- Update beans.xml to CDI 4.1 namespace (beans_4_1.xsd)
- Add @Nonbinding to @OverloadProtection.collectMetrics() for correct interceptor binding
- Add quality plugins: enforcer, checkstyle, RAT, JaCoCo, javadoc, pinned surefire
- Add checkstyle.xml with import, brace, coding, whitespace, and modifier rules
- Add full Apache License 2.0 file and META-INF/LICENSE.txt in JAR
- Add license headers to all files including CircuitBreakerDescriptor.java
- Add Javadoc to all public/protected classes and methods
- Add integration tests using dynamic-cdi-test-bean-addon with @EnableTestBeans
  verifying the full circuit-breaker lifecycle (closed → open → recovery)
- Add README.md with usage, architecture, and build instructions
- Update .gitignore for modern IDE and OS files

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>